--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#ab">O meni</a></li>
                 <li><a href="#sk">Skills</a></li>
                 <li><a href="#contact">Kontakt</a></li>
-                <li id="linkRadovi"><a href="#NaslovRadovi">Radovi</a></li>
+                <li id="linkRadovi"><a href="radovi.html">Radovi</a></li>
             </ul>
         </nav>
     </header>
