--- a/radovi.html
+++ b/radovi.html
@@ -39,11 +39,11 @@
 
             <span>
                 <b>Karikatura</b>
-                <img src="karikatura.jpg" alt="">
+                <img src="karikatura.jpg" alt="" width="100%">
             </span>
             <span>
                 <b>Dizajn naljepnice za vino</b>
-                <img src="Nl.jpg" alt="">
+                <img src="Nl.jpg" alt="" width="100%">
             </span>
 
         </article>
