--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <div class="edDiv">
 
-                    <h3>Fronted</h3>
+                    <h3>Frontend</h3>
                     <section class="ed1">
 
 
