--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <article class="cont">
                     <img src="slike/github_733609.png" alt="">
                     <h5>Github</h5>
-                    <a href="https://github.com/LukaRaguz001">LukaRaguz001</a>
+                    <p><a href="https://github.com/LukaRaguz001">LukaRaguz001</a></p>
 
                 </article>
             </div>
